--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<div id="header">
 				<span class="logo icon fa-paper-plane"></span>
-				<h1>Página Web Equipo 3.</h1>
+				<h1>Página Web Equipo 3</h1>
 				<p>A responsive HTML5 + CSS3 site template designed by <a href="http://html5up.net">HTML5 UP</a>
 				<br />
 				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
@@ -48,30 +48,30 @@
 					<section class="feature right">
 						<a href="https://niarii.github.io/nicollebarrueto/" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Second Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Nicolle Barrueto</h3>
+							<p>Página Web Personal de Nicolle Barrueto.</p>
 						</div>
 					</section>
 					<section class="feature left">
 						<a href="https://elvamadeleine.github.io/Elva/" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Third Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Elva Niño</h3>
+							<p>Página Web Personal de Elva Niño.</p>
 						</div>
 					</section>
 					<section class="feature right">
 						<a href="https://alma1590.github.io/1/
 						" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Second Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Alma Sofía</h3>
+							<p>Página Web Personal de Alma Sofía.</p>
 						</div>
 					</section>
 					<section class="feature left">
 						<a href="https://ivylf.github.io/Ivy-Linares/#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Third Thing</h3>
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+							<h3>Ivy Linares</h3>
+							<p>Página Web Personal de Ivy Linares.</p>
 						</div>	
 				</div>
 
