--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
 			<div id="header">
 				<span class="logo icon fa-paper-plane"></span>
 				<h1>Página Web Equipo 3</h1>
-				<p>A responsive HTML5 + CSS3 site template designed by <a href="http://html5up.net">HTML5 UP</a>
+				<p>Somos un equipo del curso de Laboratorio 2</a>
 				<br />
-				and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				Estamos gustosos de presentarles nuestra página web grupal</a>.</p>
 			</div>
 
 		<!-- Main -->
 			<div id="main">
 
 				<header class="major container medium">
-					<h2>We conduct experiments that
+					<h2>Podremos aprender diseño
 					<br />
-					may or may not seriously
+					pero el diseño nació
 					<br />
-					break the universe</h2>
+					con nosotros</h2>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
@@ -72,7 +72,13 @@
 						<div class="content">
 							<h3>Ivy Linares</h3>
 							<p>Página Web Personal de Ivy Linares.</p>
-						</div>	
+						</div>
+					</section>
+					<section class="feature left">
+						<a href="https://milenapd.github.io/LENARQ11/#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
+						<div class="content">
+							<h3>Milena Pardo</h3>
+							<p>Página Web Personal de Milena Pardo.</p>		
 				</div>
 
 				<!--
@@ -219,8 +225,8 @@
 				-->
 
 				<footer class="major container medium">
-					<h3>Get shady with science</h3>
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<h3>Somos un equipo Unido</h3>
+					<p>Mediante nuestras diferentes habilidades en diseño realizamos trabajos únicos.</p>
 					<ul class="actions special">
 						<li><a href="#" class="button">Join our crew</a></li>
 					</ul>
@@ -233,26 +239,25 @@
 				<div class="container medium">
 
 					<header class="major last">
-						<h2>Questions or comments?</h2>
+						<h2>Contáctanos y Diseñemos juntos</h2>
 					</header>
 
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
-					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<p>Mediante este medio podras contactarnos personalmente para conocernos mejor.</p>
 
 					<form method="post" action="#">
 						<div class="row">
 							<div class="col-6 col-12-mobilep">
-								<input type="text" name="name" placeholder="Name" />
+								<input type="text" name="name" placeholder="Nombre" />
 							</div>
 							<div class="col-6 col-12-mobilep">
-								<input type="email" name="email" placeholder="Email" />
+								<input type="email" name="email" placeholder="Correo" />
 							</div>
 							<div class="col-12">
-								<textarea name="message" placeholder="Message" rows="6"></textarea>
+								<textarea name="message" placeholder="Mensaje" rows="6"></textarea>
 							</div>
 							<div class="col-12">
 								<ul class="actions special">
-									<li><input type="submit" value="Send Message" /></li>
+									<li><input type="submit" value="Enviar Mensaje" /></li>
 								</ul>
 							</div>
 						</div>
