--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
 							<p>Página Web Personal de Ivy Linares.</p>
 						</div>
 					</section>
-					<section class="feature left">
+					<section class="feature right">
 						<a href="https://milenapd.github.io/LENARQ11/#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Milena Pardo</h3>
-							<p>Página Web Personal de Milena Pardo.</p>		
+							<p>Página Web Personal de Milena Pardo.</p>
+						</div>
+					</section>	
 				</div>
 
 				<!--
