--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<div id="header">
-				<span class="logo icon fa-paper-plane"></span>
+				<img src="./Icono Grupo 3_Mesa de trabajo 1.png" alt="" />></span>
 				<h1>Página Web Equipo 3</h1>
 				<p>Somos un equipo del curso de Laboratorio 2</a>
 				<br />
