--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 					<h3>Somos un equipo Unido</h3>
 					<p>Mediante nuestras diferentes habilidades en diseño realizamos trabajos únicos.</p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Join our crew</a></li>
+						<li><a href="#" class="button">Únete a nuestra tripulación</a></li>
 					</ul>
 				</footer>
 
