--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="https://alejos2304.github.io/AlejosLab2/" class="image icon solid"><img src="./Fondo José I_Mesa de trabajo 1.jpg" alt="" /></a>
+						<a href="https://alejos2304.github.io/AlejosLab2/" class="image icon solid"><img src="./images/José Alejos.png" alt="" /></a>
 						<div class="content">
 							<h3>José Alejos</h3>
 							<p>Página Web Personal de José Alejos Pérez.</p>
