--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 				<div class="box alt container">
 					<section class="feature left">
-						<a href="https://alejos2304.github.io/AlejosLab2/" class="image icon solid"><img src="./images/José Alejos.png" alt="" /></a>
+						<a href="https://alejos2304.github.io/AlejosLab2/" class="image icon solid"><img src="./images/" alt="" /></a>
 						<div class="content">
 							<h3>José Alejos</h3>
 							<p>Página Web Personal de José Alejos Pérez.</p>
@@ -53,7 +53,7 @@
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="https://elvamadeleine.github.io/Elva/" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="https://elvamadeleine.github.io/Elva/" class="image icon solid fa-mobile-alt"><img src="./images/Elva.png" alt="" /></a>
 						<div class="content">
 							<h3>Elva Niño</h3>
 							<p>Página Web Personal de Elva Niño.</p>
@@ -61,14 +61,14 @@
 					</section>
 					<section class="feature right">
 						<a href="https://alma1590.github.io/1/
-						" class="image icon solid fa-code"><img src="images/pic02.jpg" alt="" /></a>
+						" class="image icon solid fa-code"><img src="./images/Alma.png" alt="" /></a>
 						<div class="content">
 							<h3>Alma Sofía</h3>
 							<p>Página Web Personal de Alma Sofía.</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="https://ivylf.github.io/Ivy-Linares/#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="https://ivylf.github.io/Ivy-Linares/#" class="image icon solid fa-mobile-alt"><img src="./images/Ivy.png" alt="" /></a>
 						<div class="content">
 							<h3>Ivy Linares</h3>
 							<p>Página Web Personal de Ivy Linares.</p>
