--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="https://niarii.github.io/nicollebarrueto/" class="image icon solid fa-code"><img src="./images/Nicolle.png" alt="" /></a>
+						<a href="https://niarii.github.io/nicollebarrueto/" class="image icon solid"><img src="./images/Nicolle.png" alt="" /></a>
 						<div class="content">
 							<h3>Nicolle Barrueto</h3>
 							<p>Página Web Personal de Nicolle Barrueto.</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="https://elvamadeleine.github.io/Elva/" class="image icon solid fa-mobile-alt"><img src="./images/Elva.png" alt="" /></a>
+						<a href="https://elvamadeleine.github.io/Elva/" class="image icon solid"><img src="./images/Elva.png" alt="" /></a>
 						<div class="content">
 							<h3>Elva Niño</h3>
 							<p>Página Web Personal de Elva Niño.</p>
@@ -61,21 +61,21 @@
 					</section>
 					<section class="feature right">
 						<a href="https://alma1590.github.io/1/
-						" class="image icon solid fa-code"><img src="./images/Alma.png" alt="" /></a>
+						" class="image icon solid"><img src="./images/Alma.png" alt="" /></a>
 						<div class="content">
 							<h3>Alma Sofía</h3>
 							<p>Página Web Personal de Alma Sofía.</p>
 						</div>
 					</section>
 					<section class="feature left">
-						<a href="https://ivylf.github.io/Ivy-Linares/#" class="image icon solid fa-mobile-alt"><img src="./images/Ivy.png" alt="" /></a>
+						<a href="https://ivylf.github.io/Ivy-Linares/#" class="image icon solid"><img src="./images/Ivy.png" alt="" /></a>
 						<div class="content">
 							<h3>Ivy Linares</h3>
 							<p>Página Web Personal de Ivy Linares.</p>
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="https://milenapd.github.io/LENARQ11/#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="https://milenapd.github.io/LENARQ11/#" class="image icon solid"><img src="./images/Milena.png" alt="" /></a>
 						<div class="content">
 							<h3>Milena Pardo</h3>
 							<p>Página Web Personal de Milena Pardo.</p>
