--- a/index.html
+++ b/index.html
@@ -80,7 +80,15 @@
 							<h3>Milena Pardo</h3>
 							<p>Página Web Personal de Milena Pardo.</p>
 						</div>
-					</section>	
+					</section>
+					<section class="feature right">
+						<a href="https://alma1590.github.io/1/
+						" class="image icon solid"><img src="./Circuito Teórico.PNG" alt="" /></a>
+						<div class="content">
+						</div>
+					</section>
+							<h3>Algotirmo Teórico Final</h3>
+							<p>Imagen de referencial Algortimo.</p>	
 				</div>
 
 				<!--
