--- a/index.html
+++ b/index.html
@@ -228,7 +228,11 @@
 
 				<footer class="major container medium">
 					<h3>Somos un equipo Unido</h3>
-					<p>Mediante nuestras diferentes habilidades en diseño realizamos trabajos únicos.</p>
+					<section class="feature middle">
+						<a href="" class="image icon solid"><img src="./Circuito Teórico.PNG" alt="" /></a>
+						<div class="content">
+						</div>
+					<p>Muestra de algoritmo Teórico final realizado en clase.</p>
 					<ul class="actions special">
 						<li><a href="#" class="button">Únete a nuestra tripulación</a></li>
 					</ul>
