--- a/index.html
+++ b/index.html
@@ -227,13 +227,12 @@
 				-->
 
 				<footer class="major container medium">
-					<h3>Somos un equipo Unido</h3>
+					<h3>Algortitmo Teórico</h3>
 					<section class="feature middle">
 						<a href="" class="image icon solid"><img src="./Circuito Teórico.PNG" alt="" /></a>
 						<div class="content">
-					<p>Muestra de algoritmo Teórico final realizado en clase.</p>
+					<h3>Muestra de algoritmo Teórico final realizado en clase.</h3>
 					<ul class="actions special">
-						<li><a href="#" class="button">Únete a nuestra tripulación</a></li>
 					</ul>
 				</footer>
 
