--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
 
 				<footer class="major container medium">
 					<h3>Algortitmo Teórico</h3>
-					<section class="feature middle">
+					<section class="feature left">
 						<a href="" class="image icon solid"><img src="./Circuito Teórico.PNG" alt="" /></a>
 						<div class="content">
-					<h3>Muestra de algoritmo Teórico final realizado en clase.</h3>
+					<p>Muestra de algoritmo Teórico final realizado en clase.</p>
 					<ul class="actions special">
 					</ul>
 				</footer>
