--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 					<section class="feature left">
 						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class="image icon solid"><img src="./Algoritmo Final Teórico.png" alt="" /></a>
 						<div class="content">
-					<p>Muestra de algoritmo Teórico final realizado en clase.</p>
+					<p>Muestra de algoritmo Teórico final de Proyecto.</p>
 					<ul class="actions special">
 					</ul>
 				</footer>
