--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
 				<footer class="major container medium">
 					<h3>Algortitmo Teórico</h3>
 					<section class="feature left">
-						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class="image icon solid"><img src="./Algoritmo Final Teórico.png" alt="" /></a>
+						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class=""><img src="./Algoritmo Final Teórico.png" alt="" /></a>
 						<div class="content">
-					<p>Muestra de algoritmo Teórico final de Proyecto.</p>
+					<p>Muestra de algoritmo Teórico final e información detallada del proyecto.</p>
 					<ul class="actions special">
 					</ul>
 				</footer>
