--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@
 						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class=""><img src="./Algoritmo Final.png" alt="" /></a>
 						<div class="content">
 					        <p>Muestra de algoritmo Teórico final e información detallada del proyecto.</p>
+						</div>
+					</section>	
 					<ul class="actions special">
 					</ul>
 				</footer>
