--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 				-->
 
 				<footer class="major container medium">
-					<h3>Algortitmo Teórico</h3>
+					<h3>Algortitmo Teórico de Proyecto</h3>
 					<section class="feature left">
 						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class=""><img src="./Algoritmo Final.png" alt="" /></a>
 						<div class="content">
@@ -236,6 +236,8 @@
 					</ul>
 				</footer>
 
+			
+			
 			</div>
 
 		<!-- Footer -->
