--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 					<h3>Algortitmo Teórico de Proyecto</h3>
 					<section class="feature left">
 						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class=""><img src="./Algoritmo Final I.png" alt="" /></a>
-					
+						     <p>Iformación a detalle sobre Algoritmo teórico y componentes del proyecto .</p>
 						<ul class="actions special">
 					
 						</ul>
