--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 				<footer class="major container medium">
 					<h3>Algortitmo Teórico de Proyecto</h3>
 					     <p>Información a detalle sobre Algoritmo teórico y componentes del proyecto .</p>
-					<section class="feature left">
+					<section class="feature middle">
 						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class=""><img src="./Algoritmo Final I.png" alt="" /></a>
 						<ul class="actions special">
 					
