--- a/index.html
+++ b/index.html
@@ -232,6 +232,10 @@
 					<section class="feature middle">
 						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class=""><img src="./Algoritmo Final I.png" alt="" /></a>
 						<ul class="actions special">
+							<h3>Diseño de Prototipo Jaula Inteligente</h3>
+							<p>Información a detalle sobre propuesta de proyecto .</p>
+					   <section class="feature middle">
+						   <a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class=""><img src="./Foto Prototipo.jpg" alt="" /></a>
 					
 						</ul>
 				</footer>
