--- a/index.html
+++ b/index.html
@@ -232,11 +232,16 @@
 					<section class="feature middle">
 						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class=""><img src="./Algoritmo Final I.png" alt="" /></a>
 						<ul class="actions special">
-							<h3>Diseño de Prototipo Jaula Inteligente</h3>
-							<p>Información a detalle sobre propuesta de proyecto .</p>
-					   <section class="feature middle">
-						   <a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class=""><img src="./Foto Prototipo.jpg" alt="" /></a>
 					
+					</section>
+					<section class="feature right">
+						<a href="https://milenapd.github.io/LENARQ11/#" class="image icon solid"><img src="./Foto Prototipo.jpg" alt="" /></a>
+						<div class="content">
+							<h3>Proyecto Jaula Inteligente de Hámster</h3>
+							<p>Información detallada sobre proyecto.</p>
+						</div>
+					</section>
+				</div>
 						</ul>
 				</footer>
 
