--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 					
 					</section>
 					<section class="feature right">
-						<a href="https://milenapd.github.io/LENARQ11/#" class="image icon solid"><img src="./Foto Prototipo.jpg" alt="" /></a>
+						<a href="https://milenapd.github.io/LENARQ11/#" class="image icon solid"><img src="./Prototipo Jaula.png" alt="" /></a>
 						<div class="content">
 							<h3>Proyecto Jaula Inteligente de Hámster</h3>
 							<p>Información detallada sobre proyecto.</p>
