--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class=""><img src="./Algoritmo Final I.png" alt="" /></a>
 						<ul class="actions special">
 					
-					
+					    </div>
 					</section>
 					<section class="feature right">
 						<a href="https://milenapd.github.io/LENARQ11/#" class="image icon solid"><img src="./Prototipo Jaula.png" alt="" /></a>
