--- a/index.html
+++ b/index.html
@@ -236,7 +236,14 @@
 					    
 					</section>
 					<section class="feature right">
-						<a href="https://milenapd.github.io/LENARQ11/#" class="image icon solid"><img src="./Prototipo Jaula.png" alt="" /></a>
+						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class="image icon solid"><img src="./Foto Grupal Boceto Prototipo.png" alt="" /></a>
+						<div class="content">
+							<h3>Boceto Prototipo Casa Inteligente Hámster</h3>
+							<p>Boceto principal de estructura.</p>
+						</div>
+					</section>
+					<section class="feature right">
+						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class="image icon solid"><img src="./Prototipo Jaula.png" alt="" /></a>
 						<div class="content">
 							<h3>Proyecto Jaula Inteligente de Hámster</h3>
 							<p>Información detallada sobre proyecto.</p>
