--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 					
 					    
 					</section>
-					<section class="feature right">
+					<section class="feature left">
 						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class="image icon solid"><img src="./Foto Grupal Boceto Prototipo.png" alt="" /></a>
 						<div class="content">
 							<h3>Boceto Prototipo Casa Inteligente Hámster</h3>
