--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 					<section class="feature right">
 						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class="image icon solid"><img src="./Prototipo Jaula.png" alt="" /></a>
 						<div class="content">
-							<h3>Proyecto Jaula Inteligente de Hámster</h3>
+							<h3>Proyecto Casa Inteligente de Hámster</h3>
 							<p>Información detallada sobre proyecto.</p>
 						</div>
 					</section>
