--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 				<div class="container medium">
 
 					<header class="major last">
-						<h2>Contáctanos y Diseñemos juntos</h2>
+						<h2>Contácto y Diseñemos juntos</h2>
 					</header>
 
 					<p>Mediante este medio podras contactarnos personalmente para conocernos mejor.</p>
