--- a/index.html
+++ b/index.html
@@ -244,10 +244,38 @@
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class="image icon solid"><img src="./Prototipo Jaula.png" alt="" /></a>
+						<a href="" class="image icon solid"><img src="./Prototipo Jaula.png" alt="" /></a>
 						<div class="content">
-							<h3>Proyecto Casa Inteligente de Hámster</h3>
+							<h3>Cubierta en prototipo de Casita Inteligente</h3>
 							<p>Información detallada sobre proyecto.</p>
+						</div>
+					</section>
+					<section class="feature left">
+						<a href="" class="image icon solid"><img src="./Componentes Proyecto.png" alt="" /></a>
+						<div class="content">
+							<h3>Componentes del Circuito</h3>
+							<p>Componentes del circuito ya terminado y organizado para mayor facilidad del usuario.</p>
+						</div>
+					</section>
+					<section class="feature right">
+						<a href="" class="image icon solid"><img src="./CASITA Cubierta.png" alt="" /></a>
+						<div class="content">
+							<h3>Cubierta hecha con corte Láser</h3>
+							<p>Casita inteligente hecha con corte láser hecho en Illustrator.</p>
+						</div>
+					</section>
+					<section class="feature left">
+						<a href="" class="image icon solid"><img src="./Diseño 3D.png" alt="" /></a>
+						<div class="content">
+							<h3>Comedero diseño 3D</h3>
+							<p>Comedero diseño 3D hecho a base de filamento PLA, para que el roedor pueda convivir con el comedero sin la necesidad que le haga daño al masticar cierta zona.</p>
+						</div>
+					</section>
+					<section class="feature right">
+						<a href="" class="image icon solid"><img src="./Programación en clase.png" alt="" /></a>
+						<div class="content">
+							<h3>Programación de circuito en clase</h3>
+							<p>Momentos de avance la programación del circuito en clase presencial.</p>
 						</div>
 					</section>
 				</div>
@@ -263,7 +291,7 @@
 				<div class="container medium">
 
 					<header class="major last">
-						<h2>Contácto y Diseñemos juntos</h2>
+						<h2>Contáctanos y Diseñemos juntos</h2>
 					</header>
 
 					<p>Mediante este medio podras contactarnos personalmente para conocernos mejor.</p>
