--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 						<a href="" class="image icon solid"><img src="./Prototipo Jaula.png" alt="" /></a>
 						<div class="content">
 							<h3>Cubierta en prototipo de Casita Inteligente</h3>
-							<p>Información detallada sobre proyecto.</p>
+							<p>Hecho a base de cartón de 300 gr.</p>
 						</div>
 					</section>
 					<section class="feature left">
@@ -275,7 +275,7 @@
 						<a href="" class="image icon solid"><img src="./Programación en clase.png" alt="" /></a>
 						<div class="content">
 							<h3>Programación de circuito en clase</h3>
-							<p>Momentos de avance la programación del circuito en clase presencial.</p>
+							<p>Momentos de avance de la programación del circuito en clase presencial.</p>
 						</div>
 					</section>
 				</div>
