--- a/index.html
+++ b/index.html
@@ -233,6 +233,12 @@
 					</section>
 					<h3>Componentes del circuito</h3>
 					     <p>Nombre de los componentes usados en el circuito.</p>
+					<section class="feature left">
+						<a href="https://ivylf.github.io/Ivy-Linares/#" class="image icon solid"><img src="./images/Ivy.png" alt="" /></a>
+
+					</section>
+					<h3>Componentes del circuito</h3>
+					     <p>Nombre de los componentes usados en el circuito.</p>
 					<section class="feature middle">
 						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class=""><img src="./Algoritmo Final I.png" alt="" /></a>
 						<ul class="actions special">
