--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 					</section>
 					<h3>Componentes del circuito</h3>
 					     <p>Nombre de los componentes usados en el circuito.</p>
-					<section class="feature left">
+					<section class="feature middle">
 						<a href="https://ivylf.github.io/Ivy-Linares/#" class="image icon solid"><img src="./images/Ivy.png" alt="" /></a>
 
 					</section>
