--- a/index.html
+++ b/index.html
@@ -235,7 +235,23 @@
 					     <p>Nombre de los componentes usados en el circuito.</p>
 				<div class="box alt container">
 					<section class="feature middle">
-						<a href="https://ivylf.github.io/Ivy-Linares/#" class="image icon solid"><img src="./images/Ivy.png" alt="" /></a>
+						<a href="" class="image icon solid"><img src="./Componentes I.png" alt="" /></a>
+
+					</section>
+					<section class="feature middle">
+						<a href="" class="image icon solid"><img src="./Componentes II.png" alt="" /></a>
+
+					</section>
+					<section class="feature middle">
+						<a href="" class="image icon solid"><img src="./Componentes III.png" alt="" /></a>
+
+					</section>
+					<section class="feature middle">
+						<a href="" class="image icon solid"><img src="./Componentes IV.png" alt="" /></a>
+
+					</section>
+					<section class="feature middle">
+						<a href="" class="image icon solid"><img src="./Componentes V.png" alt="" /></a>
 
 					</section>
 					<h3>Componentes del circuito</h3>
