--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@
 					</section>
 					<section class="feature middle">
 						<a href="" class=""><img src="./Componentes V.png" alt="" /></a>
-
-					</section>
-					<h3>Componentes del circuito</h3>
-					     <p>Nombre de los componentes usados en el circuito.</p>
+                </section>
+					
+				    <h3>Diagrama de Flujo</h3>
+					     <p>Diagrama de Flujo del proyecto bien explicado y linkeado.</p>
 					<section class="feature middle">
-						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class=""><img src="./Algoritmo Final I.png" alt="" /></a>
+						<a href="file:///C:/Users/DELL/Downloads/DIAGRAMA%20DE%20FLUJO.pdf" class=""><img src="./Diagrama de Flujo Link.png" alt="" /></a>
 						<ul class="actions special">
 
 
