--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
 						<ul class="actions special">
 
                     </section>
-				</div>
+			</div>
+		</section>
 					<section class="feature left">
 						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class="image icon solid"><img src="./Foto Grupal Boceto Prototipo.png" alt="" /></a>
 						<div class="content">
