--- a/index.html
+++ b/index.html
@@ -262,15 +262,12 @@
 
                     </section>
 			</div>
-		</section>
-					<section class="feature left">
-						<a href="https://www.canva.com/design/DAGEIGOXCC0/ey1EQa7QtEPtDXeeRM-G1w/edit" class="image icon solid"><img src="./Foto Grupal Boceto Prototipo.png" alt="" /></a>
-						<div class="content">
-							<h3>Boceto Prototipo Casa Inteligente Hámster</h3>
-							<p>Boceto principal de estructura.</p>
-						</div>
-					</section>
-					<section class="feature right">
+		            </section>
+					<h3>Elaboración Cubierta Casa Inteligente</h3>
+					     <p>Proceso a detalle de como se logro armar la casa del Hámster.</p>
+				<div class="box alt container">
+					<section class="feature middle">
+						
 						<a href="" class="image icon solid"><img src="./Prototipo Jaula.png" alt="" /></a>
 						<div class="content">
 							<h3>Cubierta en prototipo de Casita Inteligente</h3>
