--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
 						<a href="https://drive.google.com/file/d/1M8RvQ2h8PYDoZHRm2X1wHcE2JwFHIDlZ/view?usp=sharing" class=""><img src="./Diagrama de Flujo Link.png" alt="" /></a>
 						<ul class="actions special">
 
-                    </section>
-			
-					<h3>Elaboración Cubierta Casa Inteligente</h3>
+                </section>
+			</div>
+			        <h3>Elaboración Cubierta Casa Inteligente</h3>
 					     <p>Proceso a detalle de como se logro armar la casa del Hámster.</p>
 				
 				<div class="box alt container">
