--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
 
                 </section>
 			</div>
+			    <footer class="major container medium">
 			        <h3>Elaboración Cubierta Casa Inteligente</h3>
 					     <p>Proceso a detalle de como se logro armar la casa del Hámster.</p>
 				
