--- a/index.html
+++ b/index.html
@@ -261,13 +261,13 @@
 						<ul class="actions special">
 
                 </section>
-			</div>
+			
 			    <footer class="major container medium">
 			        <h3>Elaboración Cubierta Casa Inteligente</h3>
 					     <p>Proceso a detalle de como se logro armar la casa del Hámster.</p>
 				
 				<div class="box alt container">
-					<section class="feature middle">
+					<section class="feature left">
 						
 						<a href="" class="image icon solid"><img src="./Prototipo Jaula.png" alt="" /></a>
 						<div class="content">
