--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Directive by HTML5 UP</title>
+		<title>Página Web Grupal 3</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -305,11 +305,7 @@
 					</section>
 				</div>
 						</ul>
-				</footer>
-
-			
-			
-			</div>
+				
 
 		<!-- Footer -->
 			<div id="footer">
