--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@
 			    <footer class="major container medium">
 			        <h3>Elaboración Cubierta Casa Inteligente</h3>
 					     <p>Proceso a detalle de como se logro armar la casa del Hámster.</p>
-				
+				        </div>
+					</section>
 				<div class="box alt container">
 					<section class="feature left">
 						
