--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
 					<section class="feature middle">
 						<a href="" class=""><img src="./Componentes V.png" alt="" /></a>
                 </section>
-			</div>		
+			</div>
+		        </section>	
 				    <h3>Diagrama de Flujo</h3>
 					     <p>Diagrama de Flujo del proyecto bien explicado y linkeado.</p>
 					<section class="feature middle">
