--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
 						<a href="" class=""><img src="./Componentes V.png" alt="" /></a>
                 </section>
 			</div>
-		        </section>	
+		        </section>
+				<footer class="major container medium">	
 				    <h3>Diagrama de Flujo</h3>
 					     <p>Diagrama de Flujo del proyecto bien explicado y linkeado.</p>
 					<section class="feature middle">
