--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
 					     <p>Información a detalle sobre proyecto de Laboratorio 2.</p>
 
 					</section>
+				</section>
+				<footer class="major container medium">
 					<h3>Componentes del circuito</h3>
 					     <p>Nombre de los componentes usados en el circuito.</p>
 				<div class="box alt container">
