--- a/index.html
+++ b/index.html
@@ -264,6 +264,13 @@
 						<ul class="actions special">
 
                 </section>
+				</div>
+						</ul>
+					</footer>
+
+			
+			
+				</div>
 			
 			    <footer class="major container medium">
 			        <h3>Elaboración Cubierta Casa Inteligente</h3>
@@ -280,10 +287,10 @@
 						</div>
 					</section>
 					<section class="feature right">
-						<a href="" class="image icon solid"><img src="./Componentes Proyecto.png" alt="" /></a>
+						<a href="" class="image icon solid"><img src="./Diseño Corte Láser.png" alt="" /></a>
 						<div class="content">
-							<h3>Componentes del Circuito</h3>
-							<p>Componentes del circuito ya terminado y organizado para mayor facilidad del usuario.</p>
+							<h3>Diseño Corte láser</h3>
+							<p>Diseño de corte láser hecho en illustrator.</p>
 						</div>
 					</section>
 					<section class="feature left">
