--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 						</ul>
 					</footer>
 			
-			    <footer class="major container medium">
+			        <section class="feature middle"></section>
 			        <h3>Elaboración Cubierta Casa Inteligente</h3>
 					     <p>Proceso a detalle de como se logro armar la casa del Hámster.</p>
 				        
