--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
                 </section>
 					</ul>	
 				</footer>
+				    </section>
 			        <section class="feature middle">
 			        <h3>Elaboración Cubierta Casa Inteligente</h3>
 					     <p>Proceso a detalle de como se logro armar la casa del Hámster.</p>
