--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 		        </section>
 					</ul>	
 				</footer>
-				    
+				    &nbsp;
 				    <h3>Diagrama de Flujo</h3>
 					     <p>Diagrama de Flujo del proyecto bien explicado y linkeado.</p>
 					<section class="feature middle">
@@ -266,8 +266,7 @@
 						<ul class="actions special">
 
                 </section>
-					</ul>	
-				</footer>
+					</ul>
 				    
 			    <section class="feature middle">
 			        <h3>Elaboración Cubierta Casa Inteligente</h3>
