--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
 
                 </section>
 					</ul>
-				    
-			    <section class="feature middle">
+				</section>
+				<footer class="major container medium">
 			        <h3>Elaboración Cubierta Casa Inteligente</h3>
 					     <p>Proceso a detalle de como se logro armar la casa del Hámster.</p>
 				        
