--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 						</div>
 					    </section>
 					<section class="feature right">
-						<a href="" class="image"><img src="./Diseño Corte Láser.png" alt="" /></a>
+						<a href="" class=""><img src="./Diseño Corte Láser.png" alt="" /></a>
 						<div class="content">
 							<h3>Diseño Corte láser</h3>
 							<p>Diseño de corte láser hecho en illustrator.</p>
