--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 					     <p>Información a detalle sobre proyecto de Laboratorio 2.</p>
 
 				</section>
-				<footer class="major container medium">
+			    </footer>
 					<h3>Componentes del circuito</h3>
 					     <p>Nombre de los componentes usados en el circuito.</p>
 				<div class="box alt container">
@@ -282,7 +282,7 @@
 						</div>
 					    </section>
 					<section class="feature right">
-						<a href="" class=""><img src="./Diseño Corte Láser.png" alt="" /></a>
+						<a href="" class="image"><img src="./Diseño Corte Láser.png" alt="" /></a>
 						<div class="content">
 							<h3>Diseño Corte láser</h3>
 							<p>Diseño de corte láser hecho en illustrator.</p>
@@ -311,7 +311,7 @@
 					    </section>
 				</div>
 						</ul>
-					</footer>
+				</footer>
 
 			
 			
