--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
 
 				</section>
 			    </footer>
+				    &nbsp;
 					<h3>Componentes del circuito</h3>
 					     <p>Nombre de los componentes usados en el circuito.</p>
 				<div class="box alt container">
@@ -257,7 +258,7 @@
 			</div>
 		        </section>
 					</ul>	
-				</footer>
+				<footer class="major container medium">
 				    &nbsp;
 				    <h3>Diagrama de Flujo</h3>
 					     <p>Diagrama de Flujo del proyecto bien explicado y linkeado.</p>
